--- a/src/gameComponents.json
+++ b/src/gameComponents.json
@@ -1,15 +1,15 @@
 {
     "geisha_cards": [
-        {"color": "#e6e6fa", "charm_points": 2, "victory_point_status": "neutral"},
-        {"color": "#e69500", "charm_points": 2, "victory_point_status": "neutral"},
-        {"color": "#fff04d", "charm_points": 2, "victory_point_status": "neutral"},
-        {"color": "#3399ff", "charm_points": 3, "victory_point_status": "neutral"},
-        {"color": "#ffb733", "charm_points": 3, "victory_point_status": "neutral"},
-        {"color": "#00cc22", "charm_points": 4, "victory_point_status": "neutral"},
-        {"color": "#ffc0cb", "charm_points": 5, "victory_point_status": "neutral"}
+        {"color": "#e6e6fa", "charm_points": 2, "victory_point_status": "neutral", "id": "lavender_2"},
+        {"color": "#e69500", "charm_points": 2, "victory_point_status": "neutral", "id": "amber_2"},
+        {"color": "#fff04d", "charm_points": 2, "victory_point_status": "neutral", "id": "yellow_2"},
+        {"color": "#3399ff", "charm_points": 3, "victory_point_status": "neutral", "id": "blue_3"},
+        {"color": "#ffb733", "charm_points": 3, "victory_point_status": "neutral", "id": "orange_3"},
+        {"color": "#00cc22", "charm_points": 4, "victory_point_status": "neutral", "id": "green_4"},
+        {"color": "#ffc0cb", "charm_points": 5, "victory_point_status": "neutral", "id": "pink_5"}
     ],
     "item_cards": [
-        {"color": "lavendar", "charm_points": 2, "count": 2},
+        {"color": "lavender", "charm_points": 2, "count": 2},
         {"color": "amber", "charm_points": 2, "count": 2},
         {"color": "yellow", "charm_points": 2, "count": 2},
         {"color": "blue", "charm_points": 3, "count": 3},
@@ -23,7 +23,7 @@
             "description": "Choose 1 card from your hand, and place it face-down under the Secret marker. This card will be revealed in the Scoring phase and be scored. You can check this card at any time."
         }, 
         {
-            "name": "Trade-off", 
+            "name": "Trade", 
             "description": "Choose 2 cards from your hand, and place them face-down under the Trade-off marker. These cards will not be scored in this round. You can check these cards at any time."
         }, 
         {
